# helpers/wrapper/response-message.go
@@ -4,31 +4,39 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-// Props contains properties to be responded
-type Props struct {
-	Code    int         `json:"code"`
+type HttpSuccess struct {
+	Code    int         `json:"code" example:"200"`
 	Data    interface{} `json:"data"`
-	Message string      `json:"message"`
-	Success bool        `json:"success"`
+	Message string      `json:"message" example:"Data source is mohfw"`
+	Success bool        `json:"success" example:"true"`
+}
+
+type HttpFail struct {
+	Code    int         `json:"code" example:"500"`
+	Data    interface{} `json:"data" example:""`
+	Message string      `json:"message" example:"Invalid request"`
+	Success bool        `json:"success" example:"false"`
 }
 
 // Data returns wrapped success data
 func Data(code int, data interface{}, message string, c echo.Context) error {
-	props := &Props{
+	props := &HttpSuccess{
 		Code:    code,
 		Data:    data,
 		Message: message,
 		Success: true,
 	}
-	return c.JSON(code, props)
+	indent4Spaces := "    "
+	return c.JSONPretty(code, props, indent4Spaces)
 }
 
 func Error(code int, message string, c echo.Context) error {
-	props := &Props{
+	props := &HttpFail{
 		Code:    code,
 		Data:    nil,
 		Message: message,
 		Success: false,
 	}
-	return c.JSON(code, props)
+	indent4Spaces := "    "
+	return c.JSONPretty(code, props, indent4Spaces)
 }
